trunk/Archive2/60/64aa96d99605c9/output
main.cpp:6:25: error: too few arguments provided to function-like macro invocation
   char* c = TEST(PARAMS);
                        ^
main.cpp:2:9: note: macro 'TEST' defined here
#define TEST(p1, p2) p1 p2
        ^
main.cpp:6:14: error: use of undeclared identifier 'TEST'
   char* c = TEST(PARAMS);
             ^
2 errors generated.
